--- a/artoflawncare.html
+++ b/artoflawncare.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>"The Art Of Lawn Care"</h1>
-    <h2>"This site is currently under construction"<br>"I can be reached via call or text at 352-419-1307"</h2>
+    <h2>This site is currently under construction<br>I can be reached via call or text at 352-419-1307</h2>
 </body>
 </html>
