--- a/artoflawncare.html
+++ b/artoflawncare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSite</title>
+    <title>TheArtOfLawnCareLLC</title>
 </head>
 <body>
     <h1>"The Art Of Lawn Care"</h1>
