--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>The Art Of Lawn Care</h1>
-    <h2>This site is currently under construction<br>I can be reached via call or text at 352-419-1307</h2>
+    <h2>Artistic Lawn Engineering</h2>
+    <h3>This site is currently under construction<br>I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</h3>
 </body>
 </html>
