Start up build 1

--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
+    <nav class="navbar">
+        <a class="nav-link" href="#companyName">Welcome</a>
+        <a class="nav-link" href="#contacts">Contacts</a>
+        <a class="nav-link" href="#Services">Services</a>
+    </nav>
 </head>
 <body>
-    <h1>The Art Of Lawn Care</h1>
-    <h2>Artistic Lawn Engineering<br>Serving Citrus County Florida and surrounding areas, Call or MSG TODAY!!!!!</h2>
-    <h3>This site is currently under construction<br>I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</h3>
+    <h1 id="companyName"><strong>The Art Of Lawn Care</strong></h1>
+    <h2 id="motto">Artistic Lawn Engineering</h2>
+    <p id="motto-subtext">Serving Citrus County Florida and surrounding areas,<br>Call or MSG TODAY!!!!!</p>
+    <p id="constructionText">This site is currently under construction</p>
+    
+    <p id="Services">Services</p>
+        <li id="ServiceList">Artistic Lawn cutting</li>
+        <li id="ServiceList">Percise String Trimming / edging</li>
+        <li id="ServiceList">Landscape Bed Maintenance</li>
+        <li id="ServiceList">Bush Trimming</li>
+        <li id="ServiceList">Flower Plantings / Design</li>
+        <li id="ServiceList">And More....</li>
+    <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</p>
 </body>
 </html>
