--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li id="ServiceList">Landscape Bed Maintenance</li>
         <li id="ServiceList">Bush Trimming</li>
         <li id="ServiceList">Flower Plantings / Design</li>
+        <li id="ServiceList">Pathways</li>
+        <li id="ServiceList">Stonework</li>
         <li id="ServiceList">And More....</li>
     <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</p>
 </body>
