--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     </nav>
 </head>
 <body>
-    <h1 id="companyName"><strong>The Art Of Lawn Care</strong></h1>
-    <a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
-    <!--BBcode link [url=https://ibb.co/yp9vXvd][img]https://i.ibb.co/2S9VyVW/20160505-151327.jpg[/img][/url]
+    <section id="imgHead">
+        <h1 id="companyName"><strong>The Art Of Lawn Care</strong></h1>
+    <!-- url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
+    BBcode link [url=https://ibb.co/yp9vXvd][img]https://i.ibb.co/2S9VyVW/20160505-151327.jpg[/img][/url]
     [url=https://imgbb.com/]best free image hosting[/url] //-->
-    <h2 id="motto">Artistic Lawn Engineering</h2>
+        <h2 id="motto">Artistic Lawn Engineering</h2>
+    </section>
     <p id="motto-subtext">Serving Citrus County Florida and surrounding areas,<br>Call or MSG TODAY!!!!!</p>
     <p id="constructionText">This site is currently under construction</p>
     
