--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
     </nav>
 </head>
 <body>
-    
+    <p id="constructionText">This site is currently under construction</p>
     <section id="imgHead">
         <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
-    <!-- url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
+    <!-- other url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
     BBcode link [url=https://ibb.co/yp9vXvd][img]https://i.ibb.co/2S9VyVW/20160505-151327.jpg[/img][/url]
     [url=https://imgbb.com/]best free image hosting[/url] //-->
-        <h2 id="motto">Artistic Lawn<br> Engineering</h2>
+        <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
-    <p id="motto-subtext">Serving Citrus County Florida and surrounding areas,<br>Call or MSG TODAY!!!!!</p>
-    <p id="constructionText">This site is currently under construction</p>
-    
-    <p id="red"> Insert Image here</p>
-
+    <p id="motto-subtext1">Serving Citrus County, Florida and surrounding areas.</p>
+    <img id="Citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
+    <p id="motto-subtext2">Call or MSG TODAY!!!!!<br>352-419-1307</p>
+    <!--  <img src="">   -->
     <p id="Services">Services</p>
         <li id="ServiceList">Artistic Lawn cutting</li>
         <li id="ServiceList">Percise String Trimming / edging</li>
@@ -35,5 +34,6 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">And More....</li>
     <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</p>
+    <!-- <p>Facebook link</p> -->
 </body>
 </html>
