adjused txt and citrus-co photo size

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <p id="constructionText">This site is currently under construction</p>
+    
     <section id="imgHead">
         <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
     <!-- other url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
@@ -21,7 +22,7 @@
         <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
     <p id="motto-subtext1">Serving Citrus County, Florida and surrounding areas.</p>
-    <img id="Citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
+    <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
     <p id="motto-subtext2">Call or MSG TODAY!!!!!<br>352-419-1307</p>
     <!--  <img src="">   -->
     <p id="Services">Services</p>
