About me, citrus co img resize

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
     <nav class="navbar">
-        <a class="nav-link" href="#companyName">Welcome</a>
+        <a class="nav-link" href="#companyName">About Us</a>
         <a class="nav-link" href="#contacts">Contacts</a>
         <a class="nav-link" href="#Services">Services</a>
     </nav>
@@ -21,9 +21,13 @@
     [url=https://imgbb.com/]best free image hosting[/url] //-->
         <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
-    <p id="motto-subtext1">Serving Citrus County, Florida and surrounding areas.</p>
-    <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
-    <p id="motto-subtext2">Call or MSG TODAY!!!!!<br>352-419-1307</p>
+    <p id="about-me">About Me:<br> I am Art Berger, <br>I grew up in Inverness, went to Inverness Middle School and Citrus High. Moving to Ohio mid high school and graduating from Pickaway-Ross CTC with a Carpentry Certification. Returning back to Inverness after high school in 07', I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br> This proved to be a great interest to me.<br>I returned back to Ohio and furthured my landscaping knowledge, working at a couple commercial landscaping companies and learning the trade inside and out. I am a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br> I consider myself a lawn engineer, just cutting grass doesnt quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
+    <section id="serviceArea">
+        <p>Who and where do I serve:</p>
+        <p id="motto-subtext1">Serving Citrus County, Florida and surrounding areas.</p>
+        <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
+        <p id="motto-subtext2">Call or MSG TODAY!!!!!<br>352-419-1307</p>
+    </section>
     <!--  <img src="">   -->
     <p id="Services">Services</p>
         <li id="ServiceList">Artistic Lawn cutting</li>
