facebook link added to contacts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
     <nav class="navbar">
-        <a class="nav-link" href="#companyName">About Us</a>
-        <a class="nav-link" href="#contacts">Contacts</a>
+        <a class="nav-link" href="#companyName">About Us</a>  
         <a class="nav-link" href="#Services">Services</a>
+        <a class="nav-link" href="#contacts">Contacts</a>
     </nav>
 </head>
 <body>
@@ -38,7 +38,7 @@
         <li id="ServiceList">Pathways / Patios</li>
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">And More....</li>
-    <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com</p>
+    <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com<br>and @ <a class="nav-link" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">Facebook</a></p>
     <!-- <p>Facebook link</p> -->
 </body>
 </html>
