Main changes: -Moved about me to bottom/ shorten text -Moved navLink sections and references -Added phone-links for numbers -More in depth surrounding areas -Added "accepting new clients" and made it fade -added service -changed Fb text -resize nav-links and colored other links

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
-    <nav class="navbar">
-        <a class="nav-link" href="#companyName">About Us</a>  
+    <nav class="navbar">  
+        <a class="nav-link" href="#companyName">Welcome</a>  
         <a class="nav-link" href="#Services">Services</a>
+        <a class="nav-link" href="#about-me">About Me</a>
         <a class="nav-link" href="#contacts">Contacts</a>
     </nav>
 </head>
 <body>
-    <p id="constructionText">This site is currently under construction</p>
-    
     <section id="imgHead">
         <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
     <!-- other url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
@@ -21,24 +20,25 @@
     [url=https://imgbb.com/]best free image hosting[/url] //-->
         <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
-    <p id="about-me">About Me:<br> I am Art Berger, <br>I grew up in Inverness, went to Inverness Middle School and Citrus High. Moving to Ohio mid high school and graduating from Pickaway-Ross CTC with a Carpentry Certification. Returning back to Inverness after high school in 07', I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br> This proved to be a great interest to me.<br>I returned back to Ohio and furthured my landscaping knowledge, working at a couple commercial landscaping companies and learning the trade inside and out. I am a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br> I consider myself a lawn engineer, just cutting grass doesnt quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
     <section id="serviceArea">
         <p>Who and where do I serve:</p>
-        <p id="motto-subtext1">Serving Citrus County, Florida and surrounding areas.</p>
+        <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
         <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
-        <p id="motto-subtext2">Call or MSG TODAY!!!!!<br>352-419-1307</p>
+    <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
     </section>
-    <!--  <img src="">   -->
-    <p id="Services">Services</p>
-        <li id="ServiceList">Artistic Lawn cutting</li>
-        <li id="ServiceList">Percise String Trimming / edging</li>
+    <!--  <img src="">  insert photo reel here -->
+    <p id="Services"><span class="title-words">Services</span></p>
+        <li id="ServiceList">Artistic Lawn Cutting</li>
+        <li id="ServiceList">Percise String Trimming / Edging</li>
         <li id="ServiceList">Landscape Bed Maintenance</li>
         <li id="ServiceList">Bush Trimming</li>
         <li id="ServiceList">Flower Plantings / Design</li>
         <li id="ServiceList">Pathways / Patios</li>
         <li id="ServiceList">Stonework</li>
+        <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
-    <p id="contacts">I can be reached via call or text at 352-419-1307<br>Or by email at artoflawncarellc@gmail.com<br>and @ <a class="nav-link" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">Facebook</a></p>
+    <p id="about-me"><span class="title-words">About Me:</span><br> I am Art Berger, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>lawn engineer</strong>, just cutting grass doesnt quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
+    <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>Or by email at artoflawncarellc@gmail.com<br>Find us on facebook @ <a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
     <!-- <p>Facebook link</p> -->
 </body>
 </html>
