--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <nav class="navbar">  
         <a class="nav-link" href="#companyName">Welcome</a>  
         <a class="nav-link" href="#Services">Services</a>
+        <a class="nav-link" href="#imgReel">Photos</a>
         <a class="nav-link" href="#about-me">About Me</a>
         <a class="nav-link" href="#contacts">Contacts</a>
     </nav>
@@ -37,8 +38,22 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
+    <section class="imgReel" id="imgReel">
+        <img id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
+        <img id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
+        <img id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
+        <img id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg">
+        <img id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg">
+        <img id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg">
+        <img id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg">
+        <img id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg">
+        <img id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg">
+        <img id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg">
+        <img id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg">
+    </section>
     <p id="about-me"><span class="title-words">About Me:</span><br> I am Art Berger, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>lawn engineer</strong>, just cutting grass doesnt quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
     <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>Or by email at artoflawncarellc@gmail.com<br>Find us on facebook @ <a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
     <!-- <p>Facebook link</p> -->
 </body>
 </html>
+<!--  -->
