--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
-    <section class="imgReel" id="imgReel">
+    <section class="imgContainer" id="imgReel">
         <img id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
         <img id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
         <img id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
