minor fixes, comments added for section clarification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
-    <nav class="navbar">  
+    <nav class="navbar">  <!--NavBar for sections-->
         <a class="nav-link" href="#companyName">Welcome</a>  
         <a class="nav-link" href="#Services">Services</a>
         <a class="nav-link" href="#images">Photos</a>
@@ -14,21 +14,20 @@
     </nav>
 </head>
 <body>
-    <section id="imgHead">
+    <section id="imgHead">   <!--Name, Motto, Background photo-->
         <h1 id="companyName"><strong>The Art Of <br>Lawn Care</strong></h1>
-    <!-- other url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
-    BBcode link [url=https://ibb.co/yp9vXvd][img]https://i.ibb.co/2S9VyVW/20160505-151327.jpg[/img][/url]
-    [url=https://imgbb.com/]best free image hosting[/url] //-->
+            <!-- other url links for image bb<a href="https://ibb.co/yp9vXvd"><img src="https://i.ibb.co/yp9vXvd/20160505-151327.jpg" alt="lawn-photo" border="0"></a>
+            BBcode link [url=https://ibb.co/yp9vXvd][img]https://i.ibb.co/2S9VyVW/20160505-151327.jpg[/img][/url]
+            [url=https://imgbb.com/]best free image hosting[/url] //-->
         <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
-    <section id="serviceArea">
+    <section id="serviceArea">  <!--Service area with Map and named locations-->
         <p>Who and where do I serve:</p>
         <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
-        <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
-    <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
+            <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
+        <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
     </section>
-    <!--  <img src="">  insert photo reel here -->
-    <p id="services">Services</p>
+    <p id="services">Services:</p>  <!--Servive list and photos--> 
         <li id="ServiceList">Artistic Lawn Cutting</li>
         <li id="ServiceList">Percise String Trimming / Edging</li>
         <li id="ServiceList">Landscape Bed Maintenance</li>
@@ -38,8 +37,8 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
-    <p id="photo-text">Photos</p>
-    <section class="imgContainer" id="images">
+    <p id="photo-text">Photos:</p>
+    <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
         <img id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
         <img id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
         <img id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
@@ -52,9 +51,8 @@
         <img id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg">
         <img id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg">
     </section>
-    <p id="about-me"><span class="title-words">About Me:</span><br> I am Art Berger, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>lawn engineer</strong>, just cutting grass doesnt quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
+    <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
+    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
     <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>Or by email at artoflawncarellc@gmail.com<br>Find us on facebook @ <a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
-    <!-- <p>Facebook link</p> -->
 </body>
 </html>
-<!--  -->
