change <p> element to correct <div> element and shrunk contacts back down to fit mobile batter

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
         <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
     </section>
-    <p id="services">Services:</p>  <!--Servive list and photos--> 
+    <div id="services">Services:</div>  <!--Servive list and photos--> 
         <li id="ServiceList">Artistic Lawn Cutting</li>
         <li id="ServiceList">Percise String Trimming / Edging</li>
         <li id="ServiceList">Landscape Bed Maintenance</li>
@@ -37,7 +37,7 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
-    <p id="photo-text">Photos:</p>
+    <div id="photo-text">Photos:</div>
     <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
         <img id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
         <img id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
