--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         <li id="ServiceList">And More....</li>
     <div id="photo-text">Photos:</div>
     <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
-        <img id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
-        <img id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
-        <img id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
-        <img id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg">
-        <img id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg">
-        <img id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg">
-        <img id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg">
-        <img id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg">
-        <img id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg">
-        <img id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg">
-        <img id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg">
+        <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
+        <img class="zoom" id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
+        <img class="zoom" id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
+        <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg">
+        <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg">
+        <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg">
+        <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg">
+        <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg">
+        <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg">
+        <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg">
+        <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg">
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
     <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
-    <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
+    <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
 </body>
 </html>
