--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="serviceArea">  <!--Service area with Map and named locations-->
         <p>Who and where do I serve:</p>
         <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
-            <img id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg">
+            <img class="zoom" id="citrus-co" src="https://www.homosassaflorida.com/images/citruscountymap.jpg" alt="Florida map">
         <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
     </section>
     <div id="services">Services:</div>  <!--Servive list and photos--> 
@@ -37,19 +37,20 @@
         <li id="ServiceList">Stonework</li>
         <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
         <li id="ServiceList">And More....</li>
-    <div id="photo-text">Photos:</div>
+    <div id="photo-text">Photo Gallery:</div>
     <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
-        <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg">
-        <img class="zoom" id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg">
-        <img class="zoom" id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg">
-        <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg">
-        <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg">
-        <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg">
-        <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg">
-        <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg">
-        <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg">
-        <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg">
-        <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg">
+        <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
+        <img class="zoom" id="img2" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230803_092935.jpg" alt="Staircase lines">
+        <img class="zoom" id="img3" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/IMG_20150707_112921.jpg" alt="Backyard photo">
+        <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg" alt="Memorial">
+        <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg" alt="Diamond pattern lines">
+        <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg" alt="Straight cut">
+        <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes">
+        <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg" alt="Sego and border">
+        <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
+        <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio">
+        <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway">
+        <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
     <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
