--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="#Services">Services</a>
         <a class="nav-link" href="#images">Gallery</a>
         <a class="nav-link" href="#about-me">About Me</a>
-        <a class="nav-link" href="form">Contact-Us</a>
+        <a class="nav-link" href="contacts">Contact-Us</a>
     </nav>
 </head>
 <body>
@@ -54,6 +54,7 @@
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
     <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
+   <!-- form for submiting a message to email
     <section id="form">
         <div id="ContactUs-FormTitle">Contact Us:</div>
         <form action="mailto:artoflawncarellc@gmail.com"
@@ -70,6 +71,8 @@ name="EmailForm"><div id="divider"></div>
     <button type="submit" value="Submit">Send</button>
 </form>
     </section>
-    <p id="contacts">I can be reached via call or text at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
+    -->
+    <p id="contact-section">Contacts:</p>
+    <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
 </body>
 </html>
