navlinks #services and #contacts needed fixing

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="index.css" rel="stylesheet"/>
     <nav class="navbar">  <!--NavBar for sections-->
         <a class="nav-link" href="#companyName">Welcome</a>  
-        <a class="nav-link" href="#Services">Services</a>
+        <a class="nav-link" href="#services">Services</a>
         <a class="nav-link" href="#images">Gallery</a>
         <a class="nav-link" href="#about-me">About Me</a>
-        <a class="nav-link" href="contacts">Contact-Us</a>
+        <a class="nav-link" href="#contacts">Contact-Us</a>
     </nav>
 </head>
 <body>
