--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
     <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
-   <!-- form for submiting a message to email
+   <!-- form for submiting a message to email-need node.js for POST action
     <section id="form">
         <div id="ContactUs-FormTitle">Contact Us:</div>
-        <form action="mailto:artoflawncarellc@gmail.com"
+        <form action="process-form"
 method="POST"
 enctype="multipart/form-data"
 name="EmailForm"><div id="divider"></div>
