--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             [url=https://imgbb.com/]best free image hosting[/url] //-->
         <h2 id="motto">Artistic<br> Lawn<br> Engineering</h2>
     </section>
+    <div id="welcomeMsg">Welcome to <strong>'The Art of Lawn Care'</strong><br>A new start-up, fair-priced <strong>High Quality</strong> Lawn Management service.<br>From Artistic lawn cutting and Precise String trimming to Landscapes or Pathways.<br>If your job needs an Artistic touch we are the right company for you.
+    </div>
     <section id="serviceArea">  <!--Service area with Map and named locations-->
         <p>Who and where do I serve:</p>
         <p id="serviceAreaText">Serving Citrus County, and surrounding areas:<br><span id="serviceCitys">Inverness, Lecanto, Floral City, Hernando, Crystal River, Dunnellon, Homosassa</span></p>
@@ -53,8 +55,9 @@
         <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
-    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow guy, I am the exception.</p>
-   <!-- form for submiting a message to email-need node.js for POST action
+    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow and landscape guy, I am the exception.</p>
+    <p id="bookNow">Open for business<br>Give us a call!!!</p>
+<!-- form for submiting a message to email-need node.js for POST action
     <section id="form">
         <div id="ContactUs-FormTitle">Contact Us:</div>
         <form action="process-form"
@@ -71,7 +74,7 @@ name="EmailForm"><div id="divider"></div>
     <button type="submit" value="Submit">Send</button>
 </form>
     </section>
-    -->
+-->
     <p id="contact-section">Contacts:</p>
     <p id="contacts">I can be reached via call or text anytime at <a class="tele" href="tel:352-419-1307">352-419-1307</a><br>By email at <a class="email" href="mailto:artoflawncarellc@gmail.com">artoflawncarellc@gmail.com</a><br>Find us on facebook @<br><a class="fb" target="_blank" href="https://www.facebook.com/profile.php?id=61564736883280">The Art of Lawn Care and Landscaping</a></p>
 </body>
