attempting better icon href reference file location, moved ico file to source repository in github

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtofLawnCareLLC</title>
     <link href="index.css" rel="stylesheet"/>
-    <link rel="icon" href="https://githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.ico" type="image/x-icon" >
+    <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
     <nav class="navbar"> <!--NavBar for section quicklink-->
         <img id="logo" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240925_152248.jpg">
         <a class="nav-link" href="#companyName">Welcome</a>  
