--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li id="ServiceList">Artistic Lawn Cutting</li>
         <li id="ServiceList">Percise String Trimming / Edging</li>
         <li id="ServiceList">Landscape Bed Maintenance</li>
-        <li id="ServiceList">Bush Trimming</li>
+        <li id="ServiceList">Hedge Trimming</li>
         <li id="ServiceList">Flower Plantings / Design</li>
         <li id="ServiceList">Pathways / Patios</li>
         <li id="ServiceList">Stonework</li>
@@ -54,7 +54,8 @@
         <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
     </section>
     <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
-    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club. <br>Eventually moving up north.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow and landscape guy, I am the exception.</p>
+    <p id="about-me">I am <strong>Art Berger</strong>, <br>I grew up in Inverness, went to IMS and Citrus High. I started working as a apprentice Spray Technitian at Rainbow Springs Golf and Country Club.<br>I furthured my landscaping knowledge honing my craft, working at a couple commercial landscaping companies and learning the trade inside and out.<br> I became a liscenced Spray Technitian through the Department of Agriculture for Ohio, I've held this liscence for the last 8 years.<br><br> I consider myself a <strong>Lawn Engineer</strong>, just cutting grass doesn't quite describe my <strong>'Works of Art'</strong>. <br>I take pride in my every job and the percision and artistic ability I present through it.<br> With this expertise and knowledge I return back home to Citrus County to start my own Start-up landscaping company -<strong>"The Art of Lawn Care"</strong><br>I am not your average mow and landscape guy, I am the exception.</p>
+    <p id="mission"><span id="missionTitle">Mission Statement:</span><br>-To provide the highest Quality work around at an affordable cost.<br>-To bring my hard work ethic, punctuality, experience, trust, and neighbor like mentality to the landscape trade in Citrus County.<br>-To gain long term customers through earned credit, artistic approach, and a reputation built on high quality and value.</p>
     <p id="bookNow">Open for business<br>Give us a call!!!</p>
 <!-- form for submiting a message to email-need node.js for POST action
     <section id="form">
