updated descripton with better spacing and lower case

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ArtofLawnCareLLC</title>
-        <meta name="description" content="Residential, commercial Lawncare, Maintenance and service, landscaping near me, mowing, mulching, bush trimming, leaf removal, debris clean up, patio, pathway, Inverness, citrus county ">
+        <meta name="description" content="Residential, commercial, lawncare, maintenance, service, landscaping near me, mowing, mulching, bush trimming, leaf removal, debris clean up, patio, pathway, Inverness, Citrus County ">
         <link href="index.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
         <nav class="navbar"> <!--NavBar for section quicklink-->
