added img12 to gallery section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
             <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio">
             <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway">
+            <img class="zoom" id="img12" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20241016_113350.jpg" alt="Block bed-edge">
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
         <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
