added leaf and debris removal to ServiceList

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li id="ServiceList">Percise String Trimming / Edging</li>
             <li id="ServiceList">Landscape Bed Maintenance</li>
             <li id="ServiceList">Hedge Trimming</li>
+            <li id="ServiceList">Leaf and debris Removal</li>
             <li id="ServiceList">Flower Plantings / Design</li>
             <li id="ServiceList">Pathways / Patios</li>
             <li id="ServiceList">Stonework</li>
