--- a/index.html
+++ b/index.html
@@ -30,16 +30,25 @@
             <p id="serviceAreaSubtext"><span class="fade-in-out">Accepting New Clients</span><br>See if we can service you!!!!!<br>Call or MSG TODAY!!!!!<br><br><a class="tele" href="tel:352-419-1307">352-419-1307</a></p>
         </section>
         <div id="services">Services:</div>  <!--Servive list and photos--> 
-                <li id="ServiceList">Artistic Lawn Cutting</li>
-                <li id="ServiceList">Percise String Trimming / Edging</li>
-                <li id="ServiceList">Landscape Bed Maintenance</li>
-                <li id="ServiceList">Hedge Trimming</li>
-                <li id="ServiceList">Leaf and debris Removal</li>
-                <li id="ServiceList">Flower Plantings / Design</li>
-                <li id="ServiceList">Pathways / Patios</li>
-                <li id="ServiceList">Stonework</li>
-                <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
-                <li id="ServiceList">And More....</li>
+            <div class="container">
+                <div class="row align-items-start"></div>
+                    <div class="col"><img class="list-img" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway"></div>
+                    <div class="col-2">
+                        <ul class="list">
+                            <li id="ServiceList">Artistic Lawn Cutting</li>
+                            <li id="ServiceList">Percise String Trimming / Edging</li>
+                            <li id="ServiceList">Landscape Bed Maintenance</li>
+                            <li id="ServiceList">Hedge Trimming</li>
+                            <li id="ServiceList">Leaf and debris Removal</li>
+                            <li id="ServiceList">Flower Plantings / Design</li>
+                            <li id="ServiceList">Pathways / Patios</li>
+                            <li id="ServiceList">Stonework</li>
+                            <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
+                            <li id="ServiceList">And More....</li>
+                        </ul>   
+                    </div>
+                    <div class="col-3"><img class="list-img" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes"></div>
+            </div>
         <div id="photo-text">Photo Gallery:</div>
         <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
             <img class="zoom" id="img1" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160415_101345.jpg" alt="3-teir lines">
@@ -48,11 +57,9 @@
             <img class="zoom" id="img4" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20190411_151203.jpg" alt="Memorial">
             <img class="zoom" id="img5" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20171116_092142.jpg" alt="Diamond pattern lines">
             <img class="zoom" id="img6" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160317_114543.jpg" alt="Straight cut">
-            <img class="zoom" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes">
             <img class="zoom" id="img8" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230310_125057.jpg" alt="Sego and border">
             <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
-            <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio">
-            <img class="zoom" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway">
+            <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio"> 
             <img class="zoom" id="img12" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20241016_113350.jpg" alt="Block bed-edge">
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
