changed column classes all to col, added column id's 1,2, and 3

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div id="services">Services:</div>  <!--Servive list and photos--> 
             <div class="container">
                 <div class="row align-items-start"></div>
-                    <div class="col"><img class="list-img" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway"></div>
-                    <div class="col-2">
+                    <div class="col" id="col-1" ><img class="list-img" id="img11" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240115_142306.jpg" alt="Pathway"></div>
+                    <div class="col" id="col-2">
                         <ul class="list">
                             <li id="ServiceList">Artistic Lawn Cutting</li>
                             <li id="ServiceList">Percise String Trimming / Edging</li>
@@ -47,7 +47,7 @@
                             <li id="ServiceList">And More....</li>
                         </ul>   
                     </div>
-                    <div class="col-3"><img class="list-img" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes"></div>
+                    <div class="col" id="col-3"><img class="list-img" id="img7" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160624_092602.jpg" alt="Bushes"></div>
             </div>
         <div id="photo-text">Photo Gallery:</div>
         <section class="imgContainer" id="images"> <!--Would like a later rendition of a single photo in front with left/right movement options-->
