added Presuure washing to meta description and services list

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ArtofLawnCareLLC</title>
-        <meta name="description" content="Residential, commercial, lawncare, maintenance, service, landscaping near me, mowing, mulching, bush trimming, leaf removal, debris clean up, patio, pathway, Inverness, Citrus County ">
+        <meta name="description" content="Residential, commercial, lawncare, maintenance, service, landscaping near me, mowing, mulching, bush trimming, leaf removal, debris clean up, pressure washing, patio, pathway, Inverness, Citrus County ">
         <link href="index.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="20240925_152248.ico" type="image/x-icon" >
         <nav class="navbar"> <!--NavBar for section quicklink-->
@@ -41,6 +41,7 @@
                             <li id="ServiceList">Hedge Trimming</li>
                             <li id="ServiceList">Leaf and debris Removal</li>
                             <li id="ServiceList">Flower Plantings / Design</li>
+                            <li id="ServiceList">Pressure Washing</li>
                             <li id="ServiceList">Pathways / Patios</li>
                             <li id="ServiceList">Stonework</li>
                             <li id="ServiceList">Fertilization (1/4 - 1 Ac)</li>
