--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@
             <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
             <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio"> 
             <img class="zoom" id="img12" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20241016_113350.jpg" alt="Block bed-edge">
+            <br>
+            <div id="beforeAfter">Before And After:</div>
+            <br>
+            <div class="fadeImgContainer">
+                <img class="fadeImg" id="img13" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122603_76465ffd.jpg" alt="Horseshoe">
+                <div class="arrow"></div>
+                <img class="fadeImg2" id="img14" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174828_dd50498a.jpg" alt="Horseshoe-After">
+                    <br>
+                <img class="fadeImg" id="img15" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122547_54f9d4db.jpg" alt="Bush-1">
+                <div class="arrow"></div>
+                <img class="fadeImg2" id="img16" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174851_eb30b8b5.jpg" alt="Bush-1-After">
+                    <br>
+                <img class="fadeImg" id="img17" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122331_3a673881.jpg" alt="Back-hedge-row">
+                <div class="arrow"></div>
+                <img class="fadeImg2" id="img18" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174912_2cf13761.jpg" alt="Corner-After">
+                <img class="fadeImg2" id="img19" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174931_c7d04939%201.jpg" alt="Back-hedge-After">    
+                    <br>
+                <img class="fadeImg" id="img20" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122853_d618ceb0.jpg" alt="Side-hedge">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img21" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174953_1baa0a66.jpg" alt="Side-hedge-After">
+            </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
         <p id="about-me-text">About Me:</p> <!--About me text section followed by all available contacts-->
