--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <img class="zoom" id="img9" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20230309_174907.jpg" alt="Rock beds">
             <img class="zoom" id="img10" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20240913_110518.jpg" alt="Patio"> 
             <img class="zoom" id="img12" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20241016_113350.jpg" alt="Block bed-edge">
+            <img class="zoom" id="img22" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250421_112431 1.jpg" alt="Umbrella Tree">
             <br>
             <div id="beforeAfter">Before And After:</div>
             <br>
@@ -82,6 +83,10 @@
                 <img class="fadeImg" id="img20" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_122853_d618ceb0.jpg" alt="Side-hedge">
                 <div class="arrow"></div>
                 <img class="fadeImg" id="img21" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250108_174953_1baa0a66.jpg" alt="Side-hedge-After">
+                <br>
+                <img class="fadeImg" id="img23" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250409_101832.jpg" alt="Gigantic-bush-before">
+                <div class="arrow"></div>
+                <img class="fadeImg" id="img24" src="https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20250421_135558 1.jpg" alt="Gigantic-bush-after">
             </div>
             <p id="photo-disclaimer">Some images are taken in other states, grass types and definition of cut lines may vary.</p>
         </section>
